--- a/pom.xml
+++ b/pom.xml
@@ -169,6 +169,11 @@
 			<version>v3-rev222-1.25.0</version>
 		</dependency>
 
+		<!-- ✅ Kafka -->
+		<dependency>
+			<groupId>org.springframework.kafka</groupId>
+			<artifactId>spring-kafka</artifactId>
+		</dependency>
 
 		<dependency>
 			<groupId>org.springframework.boot</groupId>
